deploy/k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-django
  namespace: mentabook
spec:
  selector:
    matchLabels:
      app: backend-django
  template:
    metadata:
      labels:
        app: backend-django
    spec:
      containers:
      - name: backend-django
        image: smuraiwarrior2012/itis_mentalbook_backend:1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
