deploy/k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-django
spec:
  type: LoadBalancer
  selector:
    app: backend-django
  ports:
  - port: 5000
    targetPort: 5000
